# solo-company-architecture

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: 01-secretary.md  02-cto-agent.md  03-cpo-agent.md  04-growth-agent.md  05-dev-agent.md  06-analyst-agent.md  README.md  agent_orchestrator.py  cto_agent.py  secretary_agent.py
agents/sops/: agent-workflow.md
agents/workspace/: TASK-20260423-022850_cpo_input.json  TASK-20260423-022850_cpo_instruction.md  TASK-20260423-022850_cpo_output.md  TASK-20260423-022850_cto_input.json  TASK-20260423-022850_cto_instruction.md  TASK-20260423-022850_cto_output.md  TASK-20260423-022850_dev_input.json  TASK-20260423-022850_dev_instruction.md  TASK-20260423-022850_dev_output.md  TASK-20260423-022850_final_report.md  TASK-20260423-022850_growth_input.json  TASK-20260423-022850_growth_instruction.md  TASK-20260423-022850_growth_output.md  tasks.json
config/: models.yaml
core/: model_router.py
docs/architecture/: 03-multi-tenant-agenthub.md
docs/planning/: solo-cli-plan.md
docs/protocol/: runtime-wrapper-integration.md  solo-os-dashboard-contract.md
docs/research/: solo-cli-research.md  solo-os-research.md
org-chart/: 01-ceo.md  02-cto.md  03-cpo.md  04-growth.md
sops/: decision-matrix.md  product-development.md  weekly-review.md
src/solo/: __init__.py  __main__.py  cli.py
tests/: test_cto_agent.py  test_model_router.py  test_orchestrator.py  test_orchestrator_integration.py  test_secretary_agent.py
tests/test_solo/: test_init.py  (+15 more)
tools/: dev-stack.md  model-router.md
(+63 files in other folders)
