[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solo-company"
version = "0.1.0"
description = "Project-level Solo Company CLI and .solo protocol"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ui = [
  "rich>=13.0",
  "prompt-toolkit>=3.0",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
solo = "solo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
solo = ["templates/default/**/*.md", "templates/default/**/*.yaml", "templates/default/**/*.json", "templates/default/**/*.py", "templates/default/.soloignore"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
